# optimization

./: .gitignore  README.md  efficiency_frontier.py  portfolio_demo.py  pyproject.toml
Gradient-Based/autodiff/: README.md  core.py  image_recognition.py  xor.py
Gradient-Based/micrograd/: ReadME.md  core.py  engine.py  xor.py
IPM/: README.md  main.py  portfolio_demo.py  solver.py
IPM/core/: base_solver.py  log_barrier.py  primal_dual.py
IPM/svm/: kernel.py  models.py  solver.py
IPM/utils/: data_gen.py  plotter.py
core/: qp_problem.py
