[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "yfinance>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ipm*"]